--- a/app/src/main/res/layout/activity_usercode.xml
+++ b/app/src/main/res/layout/activity_usercode.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="60dp">
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/txtUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:text="Total Score:"/>
             <TextView
-                android:id="@+id/totalScore"
+                android:id="@+id/txtTotalScore"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 />
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:text="Number:"/>
             <TextView
-                android:id="@+id/number"
+                android:id="@+id/txtNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
