update rank and owner complete

--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
-        android:text="Rank by Amount of Codes" />
+        android:text="Manage User" />
 
 
     <Button
@@ -22,7 +22,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Rank by Sum Scores" />
+        android:text="Manage Code" />
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+        android:text="Back" />
 
 
 
