--- a/app/src/main/res/layout/activity_delete_user.xml
+++ b/app/src/main/res/layout/activity_delete_user.xml
@@ -8,7 +8,14 @@
     tools:context=".DeleteUserActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Back"></Button>
+
         <Button
             android:id="@+id/delete_button"
             android:layout_width="match_parent"
