--- a/app/src/main/res/layout/activity_rank_unique.xml
+++ b/app/src/main/res/layout/activity_rank_unique.xml
@@ -6,7 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".RankAmount">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Back">
 
+        </Button>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/amount_rank_list"
