finish remember me, half way search

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,14 @@
             android:textSize="26dp"
             android:textColor="@color/black" />
 
-        <SearchView
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/txtSearchUser"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:imeOptions="actionSearch"
+            app:queryHint="Search User"/>
 
     </LinearLayout>
 
