--- a/app/src/main/res/layout/activity_usercode.xml
+++ b/app/src/main/res/layout/activity_usercode.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
                 android:id="@+id/usercontact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,9 +34,12 @@
                 android:hint="User contact information"
                 android:textColor="@color/black"
                 android:textSize="14dp" />
-
-
-
+            <Button
+                android:id="@+id/change_email"
+                android:layout_width="160dp"
+                android:layout_height="50dp"
+                android:text="Update email">
+            </Button>
         </LinearLayout>
 
         <LinearLayout
@@ -56,7 +59,7 @@
                 android:text="Show lowest"/>
             <Button
                 android:id="@+id/back_to_profile"
-                android:layout_width="60dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:text="back">
             </Button>
