--- a/app/src/main/res/layout/activity_usercode.xml
+++ b/app/src/main/res/layout/activity_usercode.xml
@@ -12,14 +12,26 @@
         android:orientation="vertical"
         android:layout_marginTop="60dp">
 
-        <TextView
-            android:id="@+id/txtUsername"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:text="UserName"
-            android:textSize="26dp"
-            android:textColor="@color/black" />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/txtUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:text="UserName"
+                android:textSize="26dp"
+                android:textColor="@color/black" />
+            <Button
+                android:id="@+id/btn_deleteCode"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="100dp"
+                android:text="Delete"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
