--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,69 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     tools:context=".UserProfile">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/txtUsername"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="60dp">
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="40dp"
+        android:text="Sample Username"
+        android:textSize="30dp"
+        android:textColor="@color/black" />
 
-        <TextView
-            android:id="@+id/userName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:text="UserName"
-            android:textSize="26dp"
-            android:textColor="@color/black" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="70dp">
-        <EditText
-            android:id="@+id/emailEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:inputType="textEmailAddress">
-        </EditText>
-        <Button
-            android:id="@+id/edit_button"
-            android:layout_marginLeft="100dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit"
-        ></Button>
-        </LinearLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/txtEmail2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="40dp"
+        android:textSize="14dp"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/btnUserCode"
-        android:layout_width="160dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:layout_gravity="center"
-        android:layout_marginTop="60dp"
         android:text="Code" />
 
     <Button
-        android:id="@+id/btnComment"
-        android:layout_width="160dp"
+        android:id="@+id/btnUserComment"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
         android:text="Comment" />
 
     <Button
-        android:id="@+id/btnBack"
-        android:layout_width="160dp"
+        android:id="@+id/btnUserBack"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="160dp"
+        android:layout_gravity="center"
         android:text="Back" />
 
 </LinearLayout>
