--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -32,13 +32,14 @@
         android:layout_marginTop="40dp"
         android:layout_gravity="center" />
 
-    <TextView
+    <Button
+        android:id="@+id/btnwhoscanned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:clickable="true"
-        android:text="Who else has scaned the QR code?"
+
+        android:text="Who else has scanned the QR code?"
         android:textColor="#0000FF" />
 
     <LinearLayout
