--- a/app/src/main/res/layout/activity_map_demo.xml
+++ b/app/src/main/res/layout/activity_map_demo.xml
@@ -22,20 +22,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="40dp"
         android:text="Map"
-        android:textSize="40dp"
+        android:textSize="30sp"
         android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="41dp"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/currentlocation"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="MyLocation"
-            android:textSize="10dp"/>
 
 
 
