--- a/app/src/main/res/layout/activity_rank_amount.xml
+++ b/app/src/main/res/layout/activity_rank_amount.xml
@@ -18,16 +18,39 @@
 
         </Button>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txtUserCustom"
+            android:layout_width="205dp"
+            android:layout_height="wrap_content"
+            android:text="User"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/txtScoreCustom1"
+            android:layout_width="205dp"
+            android:layout_height="wrap_content"
+            android:text="Score"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/amount_rank_list"
         android:layout_width="match_parent"
-        android:layout_height="641dp">
+        android:layout_height="590dp">
 
     </ListView>
 
     <TextView
         android:id="@+id/user_position01"
         android:layout_width="match_parent"
-        android:layout_height="87dp" />
+        android:textSize="30dp"
+        android:textColorHighlight="@color/black"
+        android:layout_height="90dp" />
 
 </LinearLayout>
