--- a/app/src/main/res/layout/activity_usercode.xml
+++ b/app/src/main/res/layout/activity_usercode.xml
@@ -15,7 +15,7 @@
             android:id="@+id/back_to_profile"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="back">
+            android:text="BACK Menu">
         </Button>
         <LinearLayout
             android:layout_width="match_parent"
